--- a/fontes/css/basico/textuais.css
+++ b/fontes/css/basico/textuais.css
@@ -54,13 +54,11 @@ a:active {
 }
 
 a[href]::after {
-	content: " \1F517";
-	font-family: iconic;
+	content: " ⚮";
 }
 
 a[href^="http"]::after {
-	content: " \1F517";
-	font-family: entypo;
+	content: " ⚯";
 }
 
 a[href^="#"]::after {
