--- a/fontes/css/documento/documento.css
+++ b/fontes/css/documento/documento.css
@@ -69,11 +69,6 @@ section.preTextual > ol {
 	counter-reset: primario secundario terciario quartenario quinario;
 }
 
-section.preTextual > ol a {
-	font: inherit;
-	text-transform: inherit;
-}
-
 section.preTextual > ol h1 {
 }
 
@@ -197,6 +192,57 @@ section.posTextual > p {
 	text-indent: 0;
 }
 
+i {
+	font-style: italic;
+}
+
+a {
+	border-color: rgba(11, 83, 148, 1);
+	border-style: solid;
+	border-width: 2px;
+	font: inherit;
+	text-transform: inherit;
+}
+
+cite a {
+	border-color: rgba(11, 148, 83, 1);
+}
+
+cite {
+	text-transform: uppercase;
+}
+
+cite time::before,
+dfn abbr::before {
+	content: "(";
+}
+
+cite time::after,
+dfn abbr::after {
+	content: ")";
+}
+
+abbr:hover {
+	cursor: help;
+}
+
+table.cronograma td,
+table.cronograma tr {
+	border-color: #000;
+	border-style: solid;
+	border-width: 1px;
+	border-collapse: collapse;
+}
+
+section.textual > ul {
+	margin-left: 2cm;
+}
+
+section.textual > ul > li {
+	list-style-type: disc;
+	list-style-position: outside;
+}
+
 section.preTextual > h1,
 section.textual > h1,
 section.posTextual > h1 {
@@ -248,9 +294,9 @@ body > section {
 		border-width: 1px;
 		box-shadow: 3px 6px 9px 0 #CCC;
 		margin: auto;
-		min-height: 297mm;
+		min-height: 247mm;
 		padding: 3cm 2cm 2cm 3cm;
-		width: 21cm;
+		width: 16cm;
 	}
 	
 	body > section + section {
