--- a/fontes/css/documento/documento.css
+++ b/fontes/css/documento/documento.css
@@ -226,14 +226,29 @@ abbr:hover {
 	cursor: help;
 }
 
-table.cronograma td,
-table.cronograma tr {
+table.quadro td,
+table.quadro th {
 	border-color: #000;
 	border-style: solid;
 	border-width: 1px;
 	border-collapse: collapse;
+	padding: 5px;
+	text-align:center;
+	vertical-align: middle;
 }
 
+table.quadro th {
+	background-color: #EEE;
+}
+
+table.quadro td.marcado {
+	background-color: #DDD;
+}
+
+table.quadro > thead th {
+	font-weight: bold;
+
+}
 section.textual > ul {
 	margin-left: 2cm;
 }
