--- a/fontes/css/documento/documento.css
+++ b/fontes/css/documento/documento.css
@@ -192,6 +192,18 @@ section.posTextual > p {
 	text-indent: 0;
 }
 
+p[id^="referencia"] + p[id^="referencia"] {
+	margin-top: 1rem;
+}
+
+p[id^="referencia"] a::before {
+	content: "<";
+}
+
+p[id^="referencia"] a::after {
+	content: ">";
+}
+
 i {
 	font-style: italic;
 }
@@ -226,6 +238,10 @@ abbr[title]:hover {
 	cursor: help;
 }
 
+strong {
+	font-weight: bold;
+}
+
 table.quadro td,
 table.quadro th {
 	border-color: #000;
@@ -245,7 +261,8 @@ table.quadro td.marcado {
 	background-color: #DDD;
 }
 
-table.quadro > thead th {
+table.quadro > thead th,
+table.quadro > tfoot th {
 	font-weight: bold;
 
 }
@@ -292,9 +309,13 @@ body > section {
 
 @media print {
 	body > section.capa {
-		height: 100vh;
 		height: 267mm;
-		box-sizing: border-box;
+		/*box-sizing: border-box;*/
+		/*-webkit-box-sizing: border-box;*/
+	}
+	
+	a {
+		border: none;
 	}
 }
 
@@ -313,6 +334,7 @@ body > section {
 		border-style: solid;
 		border-width: 1px;
 		box-sizing: border-box;
+		-webkit-box-sizing: border-box;
 		box-shadow: 3px 6px 9px 0 #CCC;
 		margin: auto;
 		min-height: 297mm;
