--- a/construcao/limpo.css
+++ b/construcao/limpo.css
@@ -1,8 +1,6 @@
 @charset "utf-8";
 
-*,
-*::before,
-*::after {
+* {
 	background-attachment: scroll; /* scroll | fixed */
 	background-color: transparent;
 	background-image: none;
@@ -84,7 +82,7 @@
 }
 
 html {
-	font-size: 16pt;
+	font-size: 12pt;
 }
 
 head,
