Definição de númeração nos códigos com listas numeradas do estilo documento.

--- a/fontes/css/documento/documento.css
+++ b/fontes/css/documento/documento.css
@@ -38,7 +38,7 @@ body > section {
 
 	body > section.capa {
 		height: 100vh;
-		page-break-after: avoid;
+		page-break-after: always;
 		page-break-inside: avoid;
 	}
 }
